--- a/jeecg-module-system/jeecg-system-api/jeecg-system-cloud-api/pom.xml
+++ b/jeecg-module-system/jeecg-system-api/jeecg-system-cloud-api/pom.xml
@@ -17,5 +17,9 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.jeecgframework.boot</groupId>
+            <artifactId>jeecg-system-inner-api</artifactId>
+        </dependency>
     </dependencies>
 </project>
