--- a/jeecg-module-system/jeecg-system-api/pom.xml
+++ b/jeecg-module-system/jeecg-system-api/pom.xml
@@ -15,6 +15,7 @@
     <modules>
         <module>jeecg-system-local-api</module>
         <module>jeecg-system-cloud-api</module>
+        <module>jeecg-system-inner-api</module>
     </modules>
 
     <dependencies>
